# RewardingVisualDoubt

./: .gitignore  BUILD_LLAMACPP.md  LICENSE  README.md  create_dataset.py  dataset.py  explore.py  generation_workflows.py  inference.py  mimic_cxr.py  prompter.py  pyproject.toml  radialog_binary_qa_ppo_training.py  report_generation_workflow.py  requirements.txt  setup.py  test_dataset.py
archived/: dataset_exploration.ipynb
examinations/: determine_num_torch_workers.ipynb  examine_gpt_2_with_lora_and_value_head.ipynb  examine_mimic_cxr_dataset.ipynb  examine_prompter.ipynb  examine_reward.ipynb  examine_vllm.ipynb  plot_mimic_cxr.py
src/RewardingVisualDoubt/: dataset.py  inference.py  infrastructure.py  mimic_cxr.py  prompter.py  response.py  reward.py  shared.py  train.py  training.py  vllm.py
tests/: test_dataset.py  test_mimic_cxr.py
workflows/: generation_workflows.py  ppo_training.ipynb  radialog_binary_qa_ppo_training.py  radialog_binary_qa_sft_training.ipynb  radialog_binary_qa_stf_training.py  report_generation.py
workflows/binary_qa/: radialog_binary_qa_kpis.py  radialog_binary_qa_ppo_training.py  radialog_binary_qa_stf_training.py
workflows/prototyping/: archived_radialog_binary_qa_ppo_training.py  ppo_training.ipynb  radialog_binary_qa_ppo_training.ipynb  radialog_binary_qa_sft_training.ipynb  vllm_old.py
workflows/report_generation/: config_ppo_reward_tuning.yaml  default_ppo_config.yaml  quadratic_reward_config.yaml  radialog_report_generation_ppo_training.py  radialog_report_generation_reward_tuning.py  run_ppo_training.py  (+3 more)
(+82 files in other folders)
