[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "RewardingVisualDoubt"
version = "0.1"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"RewardingVisualDoubt" = "src/RewardingVisualDoubt"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
